--- a/Environment/Packages/manifest.json
+++ b/Environment/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.ml-agents": "2.0.1",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.terrain-tools": "4.0.3",
     "com.unity.test-framework": "1.1.31",
