--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 # file on crash reports
 sysinfo.txt
 Environment/Logs/
+Environment/UserSettings/
+Environment/Assets/
 # Unity3D generated meta files
 *.pidb.meta
 
